--- a/views/action.pug
+++ b/views/action.pug
@@ -14,19 +14,21 @@ block append content
 		
 		h3 Raw JSON Actions
 		p
-		a(class='btn btn-primary btn-info btn-lg' href='fetch?url=' + rurl.eob + '&action=listEobs') List EOB Records
+		a(class='btn btn-primary btn-info btn-lg' href='patient/eob') List EOB Records
 		|&nbsp;
-		a(class='btn btn-primary btn-info btn-lg' href='fetch?url=' + rurl.patient) Fetch Patient Record
+		a(class='btn btn-primary btn-info btn-lg' href='patient/profile') Fetch Patient Record
 		|&nbsp;
-		a(class='btn btn-primary btn-info btn-lg' href='fetch?url=' + rurl.coverage) Fetch Coverage Record
+		a(class='btn btn-primary btn-info btn-lg' href='patient/coverage') Fetch Coverage Record
+		|&nbsp;
+		a(class='btn btn-primary btn-info btn-lg' href='patient/entireData') Fetch Patient Complete Data
 		
-		h3 Post-processed Actions
-		p
-		a(class='btn btn-primary btn-info btn-lg' href='fetch?url=' + rurl.eob + '&action=valueCodings') Fetch Value Codings
-		|&nbsp;
-		a(class='btn btn-primary btn-info btn-lg' href='fetch?url=' + rurl.patient + '&action=patientRecord') Format Patient Record
-		|&nbsp;
-		a(class='btn btn-primary btn-info btn-lg' href='fetch?url=' + rurl.eob + '&action=benefitBalance') Fetch Benefit Balances
+		//- h3 Post-processed Actions
+		//- p
+		//- a(class='btn btn-primary btn-info btn-lg' href='fetch?url=' + rurl.eob + '&action=valueCodings') Fetch Value Codings
+		//- |&nbsp;
+		//- a(class='btn btn-primary btn-info btn-lg' href='fetch?url=' + rurl.patient + '&action=patientRecord') Format Patient Record
+		//- |&nbsp;
+		//- a(class='btn btn-primary btn-info btn-lg' href='fetch?url=' + rurl.eob + '&action=benefitBalance') Fetch Benefit Balances
 		if(token)
 			h3 Token Actions
 			p
