--- a/views/action.pug
+++ b/views/action.pug
@@ -14,7 +14,7 @@ block append content
 		
 		h3 Raw JSON Actions
 		p
-		a(class='btn btn-primary btn-info btn-lg' href='patient/eob') List EOB Records
+		a(class='btn btn-primary btn-info btn-lg' href='patient/eob') Fetch EOB Records
 		|&nbsp;
 		a(class='btn btn-primary btn-info btn-lg' href='patient/profile') Fetch Patient Record
 		|&nbsp;
